--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "deploy": "gh-pages -d public"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -15,6 +16,7 @@
     "@tsconfig/svelte": "^2.0.0",
     "autoprefixer": "^10.2.6",
     "carbon-icons-svelte": "^10.33.0",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.3.5",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
